--- a/StarWars/Components/Layout/MainLayout.razor
+++ b/StarWars/Components/Layout/MainLayout.razor
@@ -9,7 +9,7 @@
     <MudAppBar Elevation="1">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
         <MudSpacer />
-        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/MudBlazor/MudBlazor" Target="_blank" />
+        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://github.com/brycetome/StarWars" Target="_blank" />
     </MudAppBar>
     <MudDrawer @bind-Open="@_open" Breakpoint="Breakpoint.Xs" Elevation="1" Variant="@DrawerVariant.Responsive">
         <MudDrawerHeader>
