One more piece of data for the random card

--- a/StarWars/Components/Pages/Home.razor
+++ b/StarWars/Components/Pages/Home.razor
@@ -71,6 +71,12 @@
                                   Label="Consumables"
                                   Data="@RandomStarship.Consumables" />
                 </MudItem>
+
+                <MudItem sm="6" md="4" xl="3">
+                    <StarshipInfo Icon="@Icons.Material.Filled.LinearScale"
+                                  Label="Consumables"
+                                  Data="@RandomStarship.Length.ToString()" />
+                </MudItem>
             </MudGrid>
 
 
