Fix label for length

--- a/StarWars/Components/Pages/Home.razor
+++ b/StarWars/Components/Pages/Home.razor
@@ -74,7 +74,7 @@
 
                 <MudItem sm="6" md="4" xl="3">
                     <StarshipInfo Icon="@Icons.Material.Filled.LinearScale"
-                                  Label="Consumables"
+                                  Label="Length"
                                   Data="@RandomStarship.Length.ToString()" />
                 </MudItem>
             </MudGrid>
